@@ -181,7 +181,7 @@ sub new {
     }
   }
   else {
-    $config = SPVM::Builder::Config::Exe->new_gnu99;
+    $config = SPVM::Builder::Config::Exe->new_gnu99(file_optional => 1);
   }
   $self->{config} = $config;
   
