@@ -37,7 +37,7 @@ I show some examples of native config files.
   use warnings;
 
   use SPVM::Builder::Config;
-  my $config = SPVM::Builder::Config->new_gnu99;
+  my $config = SPVM::Builder::Config->new_gnu99(file => __FILE__);
 
   $config;
 
@@ -118,7 +118,7 @@ B<Output the commands of the compililation and the link:>
   use warnings;
 
   use SPVM::Builder::Config;
-  my $config = SPVM::Builder::Config->new_gnu99;
+  my $config = SPVM::Builder::Config->new_gnu99(file => __FILE__);
 
   # Output the commands of the compililation and link
   $config->quiet(0);
@@ -131,7 +131,7 @@ B<Force the compilation and the link:>
   use warnings;
 
   use SPVM::Builder::Config;
-  my $config = SPVM::Builder::Config->new_gnu99;
+  my $config = SPVM::Builder::Config->new_gnu99(file => __FILE__);
 
   # Force the compilation and the link
   $config->force(1);
