@@ -2,6 +2,6 @@ use strict;
 use warnings;
 
 use SPVM::Builder::Config;
-my $config = SPVM::Builder::Config->new_gnu99;
+my $config = SPVM::Builder::Config->new_gnu99(file => __FILE__);;
 
 $config;
