@@ -3,7 +3,7 @@ use warnings;
 
 use SPVM::Builder::Config;
 
-my $config = SPVM::Builder::Config->new_gnu99;
+my $config = SPVM::Builder::Config->new_gnu99(file => __FILE__);;
 
 $config->optimize('-O2');
 
