@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use SPVM::Builder::Config;
-my $config = SPVM::Builder::Config->new_cpp;
+my $config = SPVM::Builder::Config->new_cpp(file => __FILE__);;
 
 my @source_files = qw(
   mylib.cpp
