@@ -4,7 +4,7 @@ use warnings;
 my @argv = @ARGV;
 
 use SPVM::Builder::Config;
-my $config = SPVM::Builder::Config->new_gnu99;
+my $config = SPVM::Builder::Config->new_gnu99(file => __FILE__);
 
 # C souce files
 my @source_files = qw(
