@@ -4,7 +4,7 @@ use warnings;
 use SPVM::Builder::Config;
 use SPVM::Builder::Resource;
 
-my $config = SPVM::Builder::Config->new_gnu99;
+my $config = SPVM::Builder::Config->new_gnu99(file => __FILE__);;
 
 $config->use_resource('TestCase::Resource::Mylib1::V1_0_0', mode => 'mode1', args => ['args1', 'args2']);
 
