@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use SPVM::Builder::Config;
-my $config = SPVM::Builder::Config->new_gnu99;
+my $config = SPVM::Builder::Config->new_gnu99(file => __FILE__);;
 
 $config->use_resource('TestCase::Resource::Mylib1::V1_0_0');
 $config->use_resource('TestCase::Resource::Mylib2::V1_0_0');
