@@ -3,6 +3,6 @@ use warnings;
 
 use SPVM::Builder::Config::Exe;
 
-my $bconf = SPVM::Builder::Config::Exe->new_gnu99;
+my $bconf = SPVM::Builder::Config::Exe->new_gnu99(file => __FILE__);
 
 $bconf;
