@@ -3,7 +3,7 @@ use warnings;
 
 use SPVM::Builder::Config;
 
-my $bconf = SPVM::Builder::Config->new_gnu99;
+my $bconf = SPVM::Builder::Config->new_gnu99(file => __FILE__);
 
 $bconf->optimize('-O2');
 
