@@ -4,7 +4,7 @@ use Data::Dumper;
 
 use SPVM::Builder::Config::Exe;
 
-my $config = SPVM::Builder::Config::Exe->new_gnu99;
+my $config = SPVM::Builder::Config::Exe->new_gnu99(file => __FILE__);
 
 $config->add_lib_dirs('.');
 
